# PHPAndro

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts
app/src/includes/php/main/: build-defs.h  php_config.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/php/: php.ini
app/src/main/assets/www/: index.php
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/kotlin/com/tommy0412/phpandro/: MainActivity.kt  PhpRunner.kt
app/src/main/kotlin/org/example/: MainActivity.kt  PhpRunner.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/kotlin/org/example/: AppTest.kt
